--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -34,15 +34,14 @@ bindd = SUPER, G, Signal, exec, uwsm app -- signal-desktop
 bindd = SUPER, O, Obsidian, exec, uwsm app -- obsidian -disable-gpu
 bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
 
-bindd = SUPER, A, ChatGPT, exec, $webapp="https://chatgpt.com"
+bindd = SUPER, G, ChatGPT, exec, $webapp="https://chatgpt.com"
+bindd = SUPER, A, Claude, exec, $webapp="https://claude.ai/"
 bindd = SUPER SHIFT, A, Grok, exec, $webapp="https://grok.com"
 bindd = SUPER, C, Calendar, exec, $webapp="https://app.hey.com/calendar/weeks/"
 bindd = SUPER, E, Email, exec, $webapp="https://app.hey.com"
 bindd = SUPER, Y, YouTube, exec, $webapp="https://youtube.com/"
-bindd = SUPER SHIFT, G, WhatsApp, exec, $webapp="https://web.whatsapp.com/"
-bindd = SUPER ALT, G, Google Messages, exec, $webapp="https://messages.google.com/web/conversations"
-bindd = SUPER, X, X, exec, $webapp="https://x.com/"
-bindd = SUPER SHIFT, X, X Post, exec, $webapp="https://x.com/compose/post"
+bindd = SUPER, R, Reddit, exec, $webapp="https://reddit.com/"
+bindd = SUPER, S, Signal, exec, $webapp="https://signal.org/"
 
 # Extra autostart processes
 # exec-once = uwsm app -- my-service
